# cabinetry

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  config_example.yml  config_histo.yml  example.py  modifier_grid.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml  blocking_issues.yml  dependencies-head.yml  test-package.yml
cabinetry/: __init__.py  config.py  histogram_wrapper.py  template_builder.py  template_postprocessor.py  visualize.py
cabinetry/contrib/: __init__.py  histogram_creation.py  histogram_drawing.py
docs/: advanced.rst  api.rst  cli.rst  conf.py  config.rst  core.rst  index.rst
pytfc/: histogram_wrapper.py  template_builder.py  template_postprocessor.py
src/cabinetry/: __init__.py  _typing.py  config.py  configuration.py  experimental.py  fit.py  histo.py  histogram_wrapper.py  model_utils.py  route.py  smooth.py  tabulate.py  template_builder.py  template_postprocessor.py  visualize.py  workspace.py
src/cabinetry/cli/: __init__.py
src/cabinetry/contrib/: __init__.py  coffea_wrapper.py  histogram_creation.py  histogram_creator.py  histogram_drawing.py  histogram_reader.py  matplotlib_visualize.py
src/cabinetry/fit/: __init__.py  results_containers.py  utils.py
src/cabinetry/schemas/: config.json
src/cabinetry/templates/: __init__.py  builder.py  collector.py  postprocessor.py  utils.py
src/cabinetry/visualize/: __init__.py  plot_model.py  plot_result.py  plot_results.py  utils.py
tests/: conftest.py  test_backends.py  test_cabinetry.py  test_config.py  test_configuration.py  test_fit.py  test_histo.py  test_integration.py  test_model_utils.py  test_route.py  test_smooth.py  test_table.py  test_tabulate.py  test_template_builder.py  test_template_postprocessor.py  test_visualize.py  test_workspace.py  utils.py
tests/cli/: test_cli.py
tests/contrib/: test_contrib_histogram_creator.py  test_contrib_histogram_reader.py  test_histogram_creation.py  test_histogram_drawing.py  test_matplotlib_visualize.py
tests/fit/: test_fit.py  test_fit_results_containers.py  test_results_containers.py  test_utils.py
tests/templates/: test_templates.py  test_templates_builder.py  test_templates_collector.py  test_templates_postprocessor.py  test_templates_utils.py
tests/visualize/: test_plot_model.py  test_plot_result.py  test_plot_results.py  test_utils.py  test_visualize.py  test_visualize_plot_model.py  test_visualize_plot_result.py
util/: create_histograms.py  create_ntuples.py
utils/: config_histograms.yml  create_histograms.py  create_ntuples.py
