[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.mypy]
files = "src/cabinetry"
pretty = true
show_error_context = true
show_error_codes = true
# strict = true
# disallow_untyped_calls = true  # numpy 1.21 change in behavior
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
python_version = "3.7"

[[tool.mypy.overrides]]
module = [
    "uproot",
    "awkward",
    "pyhf",
    "matplotlib.*",
    "iminuit",
    "jsonschema",
    "scipy.*",
]
ignore_missing_imports = true
