[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.mypy]
files = "src/cabinetry"
pretty = true
show_error_context = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
python_version = "3.7"

[[tool.mypy.overrides]]
module = [
    "uproot",
    "awkward",
    "awkward._v2",
    "pyhf",
    "matplotlib.*",
    "iminuit",
    "jsonschema",
    "scipy.*",
    "packaging.*",
]
ignore_missing_imports = true
