[metadata]
name = cabinetry
version = 0.4.0
author = Alexander Held
description = design and steer profile likelihood fits
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_files = LICENSE
url = https://github.com/scikit-hep/cabinetry
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir = =src
python_requires = >=3.7
install_requires =
    pyhf[minuit]~=0.6.3  # addition of model.config.par_names()
    boost_histogram>=1.0.0  # subclassing with family, 1.02 for stdev scaling fix (currently not needed)
    awkward>=1.0  # new API
    tabulate>=0.8.1  # multiline text
    matplotlib
    typing_extensions;python_version<"3.8"  # for Literal type
    # below are direct dependencies of cabinetry, which are also included via pyhf[iminuit]
    numpy
    pyyaml
    iminuit
    jsonschema
    click
    scipy

[options.packages.find]
where = src

[options.package_data]
cabinetry =
    py.typed
    schemas/config.json

[options.entry_points]
console_scripts =
    cabinetry = cabinetry.cli:cabinetry

[tool:pytest]
addopts = --cov=cabinetry --cov-report html --cov-report term-missing --cov-branch -rsx --typeguard-packages=cabinetry
filterwarnings =
    ignore:no type annotations present:UserWarning:typeguard:
    ignore:no code associated:UserWarning:typeguard:

[flake8]
max-complexity = 15
max-line-length = 88
exclude = docs/conf.py
count = True
statistics = True
import-order-style = google
application-import-names = cabinetry, utils
extend-ignore = E203  # whitespace before ':'
# ignore print statements in example
per-file-ignores =
    example.py: T

[pytype]
inputs = src/cabinetry

[pydocstyle]
# configuration duplicated in pre-commit config
match = (?!setup|example).*\.py
match_dir = ^(?!(tests|utils|docs)).*
convention = google
