[metadata]
name = cabinetry
version = 0.6.0
author = Alexander Held
description = design and steer profile likelihood fits
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_files = LICENSE
url = https://github.com/scikit-hep/cabinetry
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir = =src
python_requires = >=3.8
install_requires =
    pyhf[minuit]~=0.7.0  # model.config.suggested_fixed / .par_names API changes, set_poi(None)
    boost_histogram>=1.0.0  # subclassing with family, 1.02 for stdev scaling fix (currently not needed)
    tabulate>=0.8.1  # multiline text
    matplotlib>=3.5.0  # layout kwarg for subplots
    # below are direct dependencies of cabinetry, which are also included via pyhf[iminuit]
    numpy
    pyyaml
    iminuit
    jsonschema
    click
    scipy
    packaging  # for version parsing

[options.packages.find]
where = src

[options.package_data]
cabinetry =
    py.typed
    schemas/config.json

[options.entry_points]
console_scripts =
    cabinetry = cabinetry.cli:cabinetry

[tool:pytest]
# running typeguard can result in lower coverage https://github.com/agronholm/typeguard/issues/356
addopts = --cov=cabinetry --cov-report html --cov-report term-missing --cov-branch -rsx --typeguard-packages=cabinetry

[flake8]
max-complexity = 18
max-line-length = 88
exclude = docs/conf.py
count = True
statistics = True
import-order-style = google
application-import-names = cabinetry, utils
# ignore whitespace before ':'
extend-ignore = E203
# ignore print statements in example
per-file-ignores =
    example.py: T

[pytype]
inputs = src/cabinetry

[pydocstyle]
# configuration duplicated in pre-commit config
match = (?!setup|example).*\.py
match_dir = ^(?!(tests|utils|docs)).*
convention = google
